--- a/presentations/LucyLou130320/presentation.tex
+++ b/presentations/LucyLou130320/presentation.tex
@@ -168,6 +168,9 @@ March 20, 2013}
 \item $-5 \geq MD \geq -15$
 }
 {\footnotesize \bib{ReddyEtAl2009}}
+\pause
+\vfill
+\bb{\item one measurement per eye and patient $\to$ 3142 VFs}
 }
 
 \fr{Correlations of Glaucomatous VF Locations}{
